# Apollo

./: .typos.toml  AI_POLICY.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md  dprint.json  flake.nix  mkdocs.yml
crates/apollo/: Cargo.toml
crates/apollo-dtype/: Cargo.toml  README.md
crates/apollo-dtype/src/: lib.rs
crates/apollo-dtype/src/categorical/: mapping.rs  mod.rs
crates/apollo-dylib/: Cargo.toml  README.md
crates/apollo-dylib/src/: lib.rs
crates/apollo-expr/: Cargo.toml  README.md
crates/apollo-expr/src/: hash_keys.rs  lib.rs  planner.rs
crates/apollo-expr/src/dispatch/: array.rs  binary.rs  bitwise.rs  boolean.rs  business.rs  cat.rs  cum.rs  datetime.rs  extension.rs  groups_dispatch.rs  horizontal.rs  list.rs  misc.rs  mod.rs  pow.rs  random.rs  rolling.rs  rolling_by.rs  round.rs  shift_and_fill.rs  strings.rs  struct_.rs  temporal.rs  trigonometry.rs
crates/apollo-expr/src/expressions/: aggregation.rs  alias.rs  apply.rs  binary.rs  cast.rs  column.rs  count.rs  element.rs  eval.rs  field.rs  filter.rs  gather.rs  group_iter.rs  literal.rs  mod.rs  rolling.rs  slice.rs  sort.rs  sortby.rs  structeval.rs  ternary.rs  window.rs
crates/apollo-expr/src/groups/: binview.rs  mod.rs  row_encoded.rs  single_key.rs
crates/apollo-expr/src/hot_groups/: binview.rs  fixed_index_table.rs  mod.rs  row_encoded.rs  single_key.rs
crates/apollo-expr/src/idx_table/: binview.rs  mod.rs  row_encoded.rs  single_key.rs
crates/apollo-expr/src/reduce/: any_all.rs  approx_n_unique.rs  bitwise.rs  convert.rs  count.rs  first_last.rs  first_last_nonnull.rs  len.rs  mean.rs  min_max.rs  min_max_by.rs  mod.rs  sum.rs  var_std.rs
crates/apollo-expr/src/state/: execution_state.rs  node_timer.rs
crates/apollo-ffi/: Cargo.toml
crates/apollo-ffi/src/: lib.rs  version_0.rs
crates/apollo-io/: Cargo.toml  README.md
crates/apollo-io/src/: hive.rs  lib.rs  metrics.rs  mmap.rs  options.rs  pl_async.rs  predicates.rs  scan_lines.rs  shared.rs
crates/apollo-io/src/avro/: read.rs  write.rs
crates/apollo-io/src/cloud/: adaptors.rs  apollo_object_store.rs  credential_provider.rs  glob.rs  mod.rs  object_store_setup.rs  options.rs
crates/apollo-io/src/file_cache/: cache.rs  entry.rs  eviction.rs  file_fetcher.rs  metadata.rs  utils.rs
crates/apollo-io/src/ipc/: ipc_file.rs  ipc_reader_async.rs  ipc_stream.rs  mmap.rs  write.rs
crates/apollo-io/src/json/: infer.rs  mod.rs
crates/apollo-io/src/ndjson/: buffer.rs  core.rs  mod.rs
crates/apollo-io/src/parquet/: metadata.rs
crates/apollo-io/src/path_utils/: hugging_face.rs  mod.rs
crates/apollo-io/src/utils/: byte_source.rs  compression.rs  file.rs  mkdir.rs  other.rs
crates/apollo-json/: Cargo.toml  README.md
crates/apollo-json/src/json/: deserialize.rs  infer_schema.rs  mod.rs
crates/apollo-json/src/ndjson/: deserialize.rs  file.rs  mod.rs  write.rs
crates/apollo-lazy/: Cargo.toml  README.md
crates/apollo-lazy/src/: dot.rs  lib.rs  prelude.rs
crates/apollo-lazy/src/dsl/: functions.rs  mod.rs
crates/apollo-lazy/src/frame/: cached_arenas.rs  exitable.rs  mod.rs  python.rs
crates/apollo-lazy/src/scan/: anonymous_scan.rs  catalog.rs  csv.rs  file_list_reader.rs  ipc.rs  ndjson.rs  parquet.rs
crates/apollo-lazy/src/tests/: aggregations.rs  arity.rs  cse.rs  io.rs  logical.rs  mod.rs  optimization_checks.rs  pdsh.rs  predicate_queries.rs  projection_queries.rs  queries.rs  schema.rs
crates/apollo-mem-engine/: Cargo.toml  README.md
crates/apollo-mem-engine/src/: prelude.rs
crates/apollo-mem-engine/src/executors/: cache.rs  executor.rs  ext_context.rs  filter.rs  group_by.rs  group_by_dynamic.rs  group_by_rolling.rs  group_by_streaming.rs  hconcat.rs  join.rs  merge_sorted.rs  mod.rs  projection.rs  projection_simple.rs  projection_utils.rs  slice.rs  sort.rs  stack.rs  udf.rs  union.rs  unique.rs
crates/apollo-mem-engine/src/planner/: lp.rs  mod.rs
crates/apollo-mem-engine/src/scan_predicate/: functions.rs  mod.rs
crates/apollo-ops/: Cargo.toml  README.md
crates/apollo-ops/src/chunked_array/: cov.rs  gather_skip_nulls.rs  hist.rs  mod.rs  mode.rs  peaks.rs  (+4 more)
crates/apollo-plan/: Cargo.toml  README.md  build.rs
crates/apollo-plan/src/: callback.rs  constants.rs  lib.rs  prelude.rs  utils.rs
crates/apollo-python/: Cargo.toml  README.md
crates/apollo-python/src/: cloud_client.rs  cloud_server.rs  datatypes.rs  error.rs  exceptions.rs  extension.rs  file.rs  lazygroupby.rs  lib.rs  on_startup.rs  prelude.rs  py_modules.rs  sql.rs  timeout.rs  utils.rs
crates/apollo-row/: Cargo.toml  README.md
crates/apollo-row/src/: decode.rs  encode.rs  lib.rs  row.rs  utils.rs
crates/apollo-schema/: Cargo.toml  README.md
crates/apollo-schema/src/: schema.rs
crates/apollo-sql/: Cargo.toml  README.md
crates/apollo-sql/src/: context.rs  function_registry.rs  functions.rs  keywords.rs  lib.rs  sql_expr.rs  sql_visitors.rs  table_functions.rs  types.rs
crates/apollo-sql/tests/: empty_table_function.rs  functions_aggregate.rs  functions_cumulative.rs  functions_io.rs  functions_math.rs  functions_meta.rs  functions_string.rs  functions_windows.rs  issues.rs  ops_distinct_on.rs  simple_exprs.rs  statements.rs  udf.rs
crates/apollo-stream/: Cargo.toml  README.md
crates/apollo-stream/src/: dispatch.rs  execute.rs  expression.rs  graph.rs  lib.rs  metrics.rs  morsel.rs  pipe.rs  skeleton.rs
crates/apollo-testing/: Cargo.toml  README.md
crates/apollo-time/: Cargo.toml  README.md
crates/apollo-time/src/: base_utc_offset.rs  date_range.rs  dst_offset.rs  month_end.rs  month_start.rs  offset_by.rs  replace.rs  round.rs  truncate.rs  upsample.rs  utils.rs
crates/apollo/src/: lib.rs  prelude.rs  sql.rs
py-apollo/runtime/template/: Cargo.template.toml  README.md  build.rs  pyproject.toml
pyo3-apollo/pyo3-apollo/: Cargo.toml
pyo3-apollo/pyo3-apollo-derive/: Cargo.toml  README.md
pyo3-apollo/pyo3-apollo-derive/src/: lib.rs
pyo3-apollo/pyo3-apollo-derive/tests/: 01.rs  02.rs
pyo3-apollo/pyo3-apollo/src/: alloc.rs  derive.rs  error.rs  export.rs  lib.rs  types.rs
(+2070 files in other folders)
