[workspace]
resolver = "2"
members = [
  "crates/*",
  "docs/source/src/rust",
  "py-apollo/runtime/apollo-runtime-32",
  "py-apollo/runtime/apollo-runtime-64",
  "py-apollo/runtime/apollo-runtime-compat",
  "pyo3-apollo/example/derive_expression/expression_lib",
  "pyo3-apollo/example/extend_apollo_python_dispatch/extend_apollo",
  "pyo3-apollo/example/io_plugin/io_plugin",
  "pyo3-apollo/pyo3-apollo",
  "pyo3-apollo/pyo3-apollo-derive",
]
default-members = [
  "crates/*",
]

[workspace.package]
version = "0.52.0"
authors = ["Ritchie Vink <ritchie46@gmail.com>"]
edition = "2024"
homepage = "https://www.apollo.org/"
license = "MIT"
repository = "https://github.com/apollo/apollo"

[workspace.dependencies]
aho-corasick = "1.1"
arboard = { version = "3.4.0", default-features = false }
argminmax = { version = "0.6.3", default-features = false, features = ["float", "half"] }
async-channel = { version = "2.3.1" }
async-trait = { version = "0.1.59" }
atoi_simd = "0.17"
atomic-waker = "1"
avro-schema = { version = "0.3" }
base64 = "0.22.0"
bigdecimal = "0.4.8"
bincode = { version = "2.0", features = ["serde", "std"] }
bitflags = "2"
blake3 = { version = "1.8.2" }
boxcar = "0.2.12"
bytemuck = { version = "1.22", features = ["derive", "extern_crate_alloc"] }
bytes = { version = "1.11" }
chrono = { version = "<=0.4.41", default-features = false, features = ["std"] }
chrono-tz = "0.10"
compact_str = { version = "0.9.0", features = ["serde"] }
crossbeam-channel = "0.5.15"
crossbeam-deque = "0.8.5"
crossbeam-queue = "0.3"
crossbeam-utils = "0.8.20"
either = "1.14"
ethnum = "1.3.2"
fallible-streaming-iterator = "0.1.9"
fast-float2 = { version = "^0.2.2" }
flate2 = { version = "1", default-features = false }
foldhash = "0.2.0"
futures = "0.3.25"
getrandom = "0.3"
half = { version = "2.7.1", features = ["num-traits"] }
hashbrown = { version = "0.16.0", features = ["rayon", "serde"] }
hex = "0.4.3"
indexmap = { version = "2.12", features = ["std", "serde"] }
itoa = "1.0.6"
libc = "0.2"
libloading = "0.9.0"
libm = "0.2"
memchr = "2.6"
memmap = { package = "memmap2", version = "0.9" }
ndarray = { version = "0.17", default-features = false }
num-bigint = "0.4.6"
num-derive = "0.4.2"
num-traits = "0.2"
numpy = "0.27"
object_store = { version = "0.13", default-features = false, features = ["fs"] }
parking_lot = "0.12"
percent-encoding = "2.3"
pin-project-lite = "0.2"
proptest = { version = "1.6", default-features = false, features = ["std"] }
pyo3 = "0.27"
rand = "0.9"
rand_distr = "0.5"
raw-cpuid = "11"
rayon = "1.9"
recursive = "0.1"
regex = "1.9"
regex-syntax = "0.8.5"
reqwest = { version = "0.12", default-features = false }
rmp-serde = "1.3"
rustflags = "0.1.7"
schemars = { version = "0.9.0", features = ["preserve_order"] }
serde = { version = "1.0.188", features = ["derive", "rc"] }
serde_json = "1"
serde_stacker = "0.1.12"
sha2 = "0.10"
simd-json = { version = "0.17", features = ["known-key", "128bit"] }
simdutf8 = "0.1.4"
slotmap = "1"
sqlparser = { version = "0.60", features = ["visitor"] }
stacker = "0.1"
streaming-iterator = "0.1.9"
strength_reduce = "0.2"
strum = "0.27"
strum_macros = "0.27"
tokio = { version = "1.44", default-features = false }
unicode-normalization = "0.1.24"
unicode-reverse = "1.0.8"
uuid = { version = "1.15.1", features = ["v4"] }
version_check = "0.9.4"
xxhash-rust = { version = "0.8.6", features = ["xxh3"] }
zmij = "1.0.0"
zstd = "0.13"

apollo = { version = "0.52.0", path = "crates/apollo", default-features = false }
apollo-buffer = { version = "0.52.0", path = "crates/apollo-buffer", default-features = false }
apollo-compute = { version = "0.52.0", path = "crates/apollo-compute", default-features = false }
apollo-core = { version = "0.52.0", path = "crates/apollo-core", default-features = false }
apollo-dtype = { version = "0.52.0", path = "crates/apollo-dtype", default-features = false }
apollo-dylib = { version = "0.52.0", path = "crates/apollo-dylib", default-features = false }
apollo-error = { version = "0.52.0", path = "crates/apollo-error", default-features = false }
apollo-expr = { version = "0.52.0", path = "crates/apollo-expr", default-features = false }
apollo-ffi = { version = "0.52.0", path = "crates/apollo-ffi", default-features = false }
apollo-io = { version = "0.52.0", path = "crates/apollo-io", default-features = false }
apollo-json = { version = "0.52.0", path = "crates/apollo-json", default-features = false }
apollo-lazy = { version = "0.52.0", path = "crates/apollo-lazy", default-features = false }
apollo-mem-engine = { version = "0.52.0", path = "crates/apollo-mem-engine", default-features = false }
apollo-ops = { version = "0.52.0", path = "crates/apollo-ops", default-features = false }
apollo-parquet = { version = "0.52.0", path = "crates/apollo-parquet", default-features = false }
apollo-plan = { version = "0.52.0", path = "crates/apollo-plan", default-features = false }
apollo-python = { version = "0.52.0", path = "crates/apollo-python", default-features = false }
apollo-row = { version = "0.52.0", path = "crates/apollo-row", default-features = false }
apollo-schema = { version = "0.52.0", path = "crates/apollo-schema", default-features = false }
apollo-sql = { version = "0.52.0", path = "crates/apollo-sql", default-features = false }
apollo-stream = { version = "0.52.0", path = "crates/apollo-stream", default-features = false }
apollo-testing = { version = "0.52.0", path = "crates/apollo-testing", default-features = false }
apollo-time = { version = "0.52.0", path = "crates/apollo-time", default-features = false }
apollo-utils = { version = "0.52.0", path = "crates/apollo-utils", default-features = false }
pyo3-apollo = { version = "0.25.0", path = "pyo3-apollo/pyo3-apollo" }
pyo3-apollo-derive = { version = "0.19.0", path = "pyo3-apollo/pyo3-apollo-derive" }

[workspace.dependencies.arrow-format]
package = "apollo-arrow-format"
version = "0.2.0"

[workspace.dependencies.arrow]
package = "apollo-arrow"
version = "0.52.0"
path = "crates/apollo-arrow"
default-features = false
features = [
  "compute_aggregate",
  "compute_arithmetics",
  "compute_bitwise",
  "compute_boolean",
  "compute_boolean_kleene",
  "compute_comparison",
]

[workspace.lints.clippy]
collapsible_if = "allow"

[patch.crates-io]
# packed_simd_2 = { git = "https://github.com/rust-lang/packed_simd", rev = "e57c7ba11386147e6d2cbad7c88f376aab4bdc86" }
# simd-json = { git = "https://github.com/ritchie46/simd-json", branch = "alignment" }
tikv-jemallocator = { git = "https://github.com/apollo/jemallocator", rev = "c7991e5bb6b3e9f79db6b0f48dcda67c5c3d2936" }

[profile.mindebug-dev]
inherits = "dev"
debug = "line-tables-only"

[profile.release]
lto = "thin"
debug = "line-tables-only"

[profile.nodebug-release]
inherits = "release"
debug = false

[profile.debug-release]
inherits = "release"
debug = true

[profile.dist-release]
inherits = "release"
codegen-units = 1
debug = false
lto = "fat"
