[package]
name = "apollo-json"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "JSON related logic for the Apollo DataFrame library"

[dependencies]
apollo-compute = { workspace = true, features = ["cast"] }
apollo-error = { workspace = true }
apollo-utils = { workspace = true }

arrow = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true, optional = true }
fallible-streaming-iterator = { version = "0.1" }
hashbrown = { workspace = true }
indexmap = { workspace = true }
itoa = { workspace = true }
num-traits = { workspace = true }
simd-json = { workspace = true }
streaming-iterator = { workspace = true }
zmij = { workspace = true }

[features]
chrono-tz = ["dep:chrono-tz", "arrow/chrono-tz"]
dtype-decimal = ["arrow/dtype-decimal", "apollo-compute/dtype-decimal"]
timezones = ["arrow/chrono-tz"]

[lints]
workspace = true
